--- a/views/index.njk
+++ b/views/index.njk
@@ -3,22 +3,22 @@
 {% block title %}Главная{% endblock %}
 
 {% block content %}
-	<div class="text-center text-neutral-content">
+	<div class="text-center">
 		<h1 class="py-8 sm:text-4xl text-3xl text-accent font-bold text-center">Сведения об образовательной организации</h2>
 	</div>
-	<div id="rel1" class="scroll-mt-8 hero h-auto py-6">
+	<div id="rel1" class="scroll-mt-12 hero h-auto py-6">
 		<div class="hero-content flex-col lg:flex-row">
-			<img src="1.png" class="w-2/5 rounded-lg shadow-2xl" />
-			<div class="w-3/5">
+			<img src="/img/2.jpg" class="w-full lg:w-2/5 rounded-lg shadow-2xl" />
+			<div class="w-full lg:w-3/5">
 				<h2 class="sm:text-3xl text-2xl text-accent font-bold text-center">Основные сведения</h2>
 				<p class="py-6">Полное наименование: ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "ЕДИНСТВО"<br/>
-					Сокращенное наименование: ООО " ЕДИНСТВО "<br/>
+					Сокращенное наименование: ООО "ЕДИНСТВО"<br/>
 					Дата создания образовательной организации: 03.05.2023<br/>
 					Учредителем компании является: Пономарев Алексей Александрович<br/>
 					Место нахождения организации: 119361, Г.Москва, ВН.ТЕР.Г. МУНИЦИПАЛЬНЫЙ ОКРУГ ОЧАКОВО-МАТВЕЕВСКОЕ, УЛ ОЗЁРНАЯ, Д. 4, К. 1, ПОМЕЩ. 6/1<br/>
-					Место осуществления образовательной деятельности: г. Москва, вн. тер. г. муниципальный округ Очаково–Матвеевское, улица Озёрная, дом 4, корпус 1, помещение 6/1, этаж 1, помещение XIV, комнаты №№ 1-9<br/>
+					Место осуществления образовательной деятельности: г. Москва, вн. тер. г. муниципальный округ Очаково–Матвеевское, улица Озёрная, дом 4, корпус 1, помещение 6/1, этаж 1, помещение XIV, комнаты № 1-9<br/>
 					Телефон: 8-925-637-34-99<br/>
-					Email: <br/>
+					Email: Alexponomarev1989@yandex.ru<br/>
 					Режим/график работы: пн-пт 17:00-21:00, сб-вс 15:00-21:00<br/>
 					Филиалы: ОБЩЕСТВО С ОГРАНИЧЕННОЙ<br/>
 					ОТВЕТСТВЕННОСТЬЮ "ЕДИНСТВО" филиалов не имеет<br/>
@@ -37,7 +37,7 @@
 				<p class="py-6">Учредителем организации является: Пономарев Алексей Александрович<br/>
 					Место нахождения организации: 119361, Г.Москва, ВН.ТЕР.Г. МУНИЦИПАЛЬНЫЙ ОКРУГ ОЧАКОВО-МАТВЕЕВСКОЕ, УЛ ОЗЁРНАЯ, Д. 4, К. 1, ПОМЕЩ. 6/1<br/>
 					Телефон: 8-925-637-34-99<br/>
-					Email: <br/>
+					Email: Alexponomarev1989@yandex.ru<br/>
 					Единоличным исполнительным органом управления организации является: генеральный директор Пономарев Алексей Александрович<br/>
 					Коллегиальными органами управления организации является: коллегиального органа управления нет
 				</p>
