--- a/views/error.njk
+++ b/views/error.njk
@@ -9,7 +9,7 @@
 		<!-- Made by https://github.com/Drigster -->
         <div class="hero min-h-screen" style="background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
         <div class="hero-overlay bg-opacity-60"></div>
-            <div class="hero-content text-center text-neutral-content">
+            <div class="hero-content text-center">
                 <div class="max-w-md">
                     <h1 class="text-9xl font-bold text-accent">404</h1>
                     <p class="mb-5 text-xl">Страница не найдена!</p>
