--- a/views/partials/intro.njk
+++ b/views/partials/intro.njk
@@ -1,8 +1,8 @@
 <div class="hero min-h-screen" style="background-image: url(/img/1.png);">
     <div class="hero-overlay bg-opacity-60"></div>
-        <div class="hero-content text-center">
+        <div class="hero-content text-center text-white">
             <div class="max-w-lg">
-                <h1 class="mb-5 text-5xl text-accent font-bold">Центр "Единство"</h1>
+                <h1 class="mb-5 text-5xl font-bold">Центр "Единство"</h1>
                 <p class="mb-5 text-xl">Преподаем немедицинские техники оздоровления От классического массажа до остеопатисеских техник.</p>
             </div>
         </div>
