--- a/views/partials/nav.njk
+++ b/views/partials/nav.njk
@@ -1,6 +1,8 @@
-<div class="navbar bg-base-100 fixed top-0 z-10">
+<div class="navbar bg-base-100 fixed top-0 z-10 text-accent">
 	<div class="flex-1">
-		<a class="btn btn-ghost normal-case text-xl">Центр Единство</a>
+		<a href="/">
+			<img class="p-0 m-0 btn btn-ghost normal-case text-xl" src="/img/3.png" alt="Центр Единство">
+		</a>
 	</div>
 	<div class="flex-none hidden lg:flex">
 		<ul class="menu menu-horizontal px-1">
