--- a/views/error.njk
+++ b/views/error.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="light">
+<html data-theme="mytheme">
 	<head>
 		<link href="/css/style.css" rel="stylesheet">
   		<link rel="icon" type="image/x-icon" href="/img/favicon.ico">
@@ -7,10 +7,10 @@
 	</head>
 	<body>
 		<!-- Made by https://github.com/Drigster -->
-        <div class="hero min-h-screen" style="background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
+        <div class="hero min-h-screen" style="background-image: url(/img/1.png);">
         <div class="hero-overlay bg-opacity-60"></div>
             <div class="hero-content text-center">
-                <div class="max-w-md">
+                <div class="max-w-md text-white">
                     <h1 class="text-9xl font-bold text-accent">404</h1>
                     <p class="mb-5 text-xl">Страница не найдена!</p>
                     <a class="mb-5 link" href="/">Вернутся на главную!</a>
