--- a/views/index.njk
+++ b/views/index.njk
@@ -14,7 +14,7 @@
 				<p class="py-6">Полное наименование: ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "ЕДИНСТВО"<br/>
 					Сокращенное наименование: ООО "ЕДИНСТВО"<br/>
 					Дата создания образовательной организации: 03.05.2023<br/>
-					Учредителем компании является: Пономарев Алексей Александрович<br/>
+					Учредителями компании являются: Пономарев Алексей Александрович, Пыскова Оксана Анатольевна<br/>
 					Место нахождения организации: 119361, Г.Москва, ВН.ТЕР.Г. МУНИЦИПАЛЬНЫЙ ОКРУГ ОЧАКОВО-МАТВЕЕВСКОЕ, УЛ ОЗЁРНАЯ, Д. 4, К. 1, ПОМЕЩ. 6/1<br/>
 					Место осуществления образовательной деятельности: г. Москва, вн. тер. г. муниципальный округ Очаково–Матвеевское, улица Озёрная, дом 4, корпус 1, помещение 6/1, этаж 1, помещение XIV, комнаты № 1-9<br/>
 					Телефон: 8-925-637-34-99<br/>
